@@ -6,6 +6,7 @@
     * Fix a bug that IO::Socket::UNIX does not work well.
   [Incompatible Changes]
     * Remove IO::Handle#new method and IO::Handle becomes an abstruct class.
+    * IO::File#fdopen method becomes a private method.
 0.221 2023-10-10
   [Internal Changes]
     * IO::Handle#set_blocking method always perform a system call.
